--- a/TauCode/src/styles/Home.css
+++ b/TauCode/src/styles/Home.css
@@ -26,9 +26,34 @@ body {
   font-family: 'poppins', sans-serif;
   font-weight: 500;
 }
-
+.navbarhome {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  position: fixed;
+  z-index: 10;
+}
+.PlayGround{
+  padding: 2px 20px
+}
+.navhomes-links li {
+  align-items: center;
+  display: flex;
+} 
 
 .Hero {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.about{
   width: 100%;
   height: 100vh;
   display: flex;
