--- a/TauCode/src/styles/Home.css
+++ b/TauCode/src/styles/Home.css
@@ -18,6 +18,7 @@ body {
   background-color: #ffffff;
   color: #010101;
   font-family: 'poppins';
+  scroll-behavior: smooth;
 }
 .logodiv span {
   font-family: 'Rekalgera', sans-serif;
@@ -31,9 +32,14 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 0 20px;
+  top: 0;
   position: fixed;
   z-index: 10;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 .PlayGround{
   padding: 2px 20px
@@ -45,19 +51,55 @@ body {
 
 .Hero {
   width: 100%;
-  height: 100vh;
+  display: flex;
+  
+}
+.leftdiv{
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  padding: 0 2rem;
+  
 }
 
 
 .about{
   width: 100%;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  
+}
+
+.Hero img{
+  margin: 4rem 0;
+  
+  
+}
+
+.btn-primary{
+  border: 1px solid #000;
+  padding: 0.5rem 1rem;
+}
+
+.btn-secondary {
+  border: 1px solid #000;
+  padding: 0.5rem 1rem;
+}
+.leftdiv span{
+  font-family: poppins, sans-serif;
+  font-size: 2.5rem;
+  color: #000;
+}
+
+.descSpan span{
+  font-family: 'poppins', sans-serif;
+  font-size: 1.2rem;
+  color: #000;
+  margin-top: 1rem;
+}
+
+.Slogan h1{
+  padding: 0.5rem 20px;
+  border-radius: 10px;
+  background: #000;
 }
