--- a/TauCode/src/styles/Home.css
+++ b/TauCode/src/styles/Home.css
@@ -40,6 +40,7 @@ body {
   backdrop-filter: blur(14px);
   -webkit-backdrop-filter: blur(14px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 .PlayGround{
   padding: 2px 20px
@@ -71,7 +72,7 @@ body {
 }
 
 .Hero img{
-  margin: 4rem 0;
+  margin-top: 100px;
   
   
 }
