--- a/TauCode/src/styles/Home.css
+++ b/TauCode/src/styles/Home.css
@@ -104,3 +104,26 @@ body {
   border-radius: 10px;
   background: #000;
 }
+
+.Slogan{
+  margin-top: 20px;
+  top: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
+.CodeBox {
+  background-color: #1e1e1e; /* Dark code editor look */
+  color: #ffffff;
+  font-family: 'JetBrains Mono';
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  min-width: 1200px;
+
+  position: relative;
+}
