--- a/TauCode/src/styles/Home.css
+++ b/TauCode/src/styles/Home.css
@@ -160,10 +160,9 @@ body {
   padding: 2rem;
   border-radius: 1rem;
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  overflow-x: auto;
-  min-width: unset;
-}
+  min-width: 1200px;
+
+  }
 
 /* Code syntax highlighting */
 .CodeBox .keyword {
