--- a/TauCode/src/styles/UserManual.css
+++ b/TauCode/src/styles/UserManual.css
@@ -3,7 +3,7 @@
 @font-face {
     font-family: 'JetBrains Mono';
     font-style: normal;
-    src: url(../src/assets/JetBrainsMono-Regular.ttf) format('truetype');
+    src: url(/fonts/JetBrainsMono-Regular.ttf) format('truetype');
 }
 
 /* Global reset and fonts */
@@ -123,9 +123,8 @@
 }
 
 span {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: JetBrains Mono, monospace;
 }
-
 /* Keywords grid */
 .keywordsGrid {
   display: grid;
