changed title to desicode

--- a/TauCode/src/styles/Home.css
+++ b/TauCode/src/styles/Home.css
@@ -193,7 +193,10 @@ body {
   padding: 0.5rem;
 }
 
-
+.imagediv{
+  width: 500px;
+  
+}
 /* ───────────────────────────────
    📱 Media Queries for Responsiveness
 ──────────────────────────────── */
