--- a/TauCode/src/styles/Home.css
+++ b/TauCode/src/styles/Home.css
@@ -197,6 +197,18 @@ body {
   width: 500px;
   
 }
+.span1{
+  font-size: 3rem;
+
+
+}
+.span2{
+  font-size: 3rem;
+  -webkit-text-stroke: 1.5px black;
+  color: transparent;
+}
+
+
 /* ───────────────────────────────
    📱 Media Queries for Responsiveness
 ──────────────────────────────── */
