--- a/TauCode/src/styles/UserManual.css
+++ b/TauCode/src/styles/UserManual.css
@@ -1,4 +1,13 @@
 
+@font-face {
+  font-family: "Rekalgera";
+  src: url("/fonts/RekalgeraRegular-3lrvp.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 
 /* Global reset and fonts */
 * {
@@ -22,6 +31,7 @@
   justify-content: center;
   /* For small screens allow flex-wrap and column direction */
   flex-wrap: wrap;
+  margin-top: 3rem;
 }
 
 /* Card */
@@ -55,6 +65,11 @@
   line-height: 1.1;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
+
+
+
 
 /* Title Accent */
 .titleAccent {
@@ -341,4 +356,44 @@ span {
     padding: 1rem;
     max-height: 300px;
   }
+}
+
+
+
+
+.navbarUser{
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  padding: 10px;
+ 
+}
+.navbarUser ul{
+  padding: 0.5rem 0.5rem;
+  border-radius: 40px;
+  margin-top: 10px;
+
+}
+.Userli{
+  padding: 10px 20px;
+  border-radius: 30px;
+}
+
+
+.logo-img-text span {
+  font-family: 'Rekalgera', sans-serif;
+}
+
+.logo-img-text  {
+  color: transparent;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border-radius: 30px;
+  padding: 10px 20px;
+   border-bottom: 1px solid var(--glass-border);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  backdrop-filter: blur(10px);
+  box-shadow: var(--glass-shadow);
 }
