--- a/TauCode/src/styles/Home.css
+++ b/TauCode/src/styles/Home.css
@@ -205,11 +205,13 @@ body {
 
 .socialspan {
   display: flex;
+  transition: all 0.3s ease;
+  align-items: center;
 }
 .socialspan:hover {
   background: #000;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
   color: white;
 
  
